--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -164,11 +164,11 @@ Přesto najdeme mnoho takových zbraní, které se staly \textbf{ikonickým symb
 
 
 \subsection{Shrnutí}
-Pokud zbraň obsahuje násilné prvky, s největší pravděpodobností v ní najdeme nějakou chladnou zbraň. Typický způsob její implementace je model "černé skříňky": hráči je poskytnuto jedno tlačítko - \textbf{Zaútoč!} - po jeho stisknutí hráčská postava sama provede útok jak uzná za vhodné. 
+Pokud videohra obsahuje násilné prvky, s největší pravděpodobností v ní najdeme nějakou chladnou zbraň. Typický způsob její implementace je model "černé skříňky": hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - po jeho stisknutí hráčská postava sama provede útok jak uzná za vhodné. 
 
-Výhodami toho přístupu je vysoká přívětivost a nenáročnost pro nové hráče a schopnost sloužit jako uniformní rozhraní slučující i velmi odlišné typy zbraní (světelný meč, řemdih, rozbitou lahev od pálenky). Některým hráčům však může vadit nedostatečný pocit kontroly nad konáním jejich postavy.
+Výhodami toho přístupu je vysoká \textbf{přívětivost a nenáročnost} pro nové hráče a schopnost sloužit jako \textbf{uniformní rozhraní} slučující i velmi odlišné typy zbraní (světelný meč, řemdih, rozbitou lahev od pálenky). Některým hráčům však může vadit \textbf{nedostatečný pocit kontroly} nad konáním jejich postavy.
 
-V mnoha hrách (např. žánry \acs{FPS}, stealth) slouží chladná zbraň pouze jako doplňující prvek, jednoduchost tohoto přístupu je tedy ideálním stavem. Chce-li hra systému chladné zbraně přidat na hloubce, aby mohl sloužit jako nosná herní mechanika, dosahuje se toho typicky důrazem na pohyb, časování, a kombinací s dalšími prvky (magie, lektvary, pasti v herním prostředí).
+V mnoha hrách (např. žánry \acs{FPS}, stealth) slouží chladná zbraň pouze jako \textbf{doplňující prvek}, jednoduchost tohoto přístupu je tedy ideálním stavem. Chce-li hra takovémuto systému přidat na hloubce, aby mohl sloužit jako její \textbf{nosná herní mechanika}, dosahuje se toho typicky důrazem na pohyb, časování, kombinací s dalšími prvky (magie, lektvary, pasti v herním prostředí) a osobitým designem nepřátel.
 
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
  % xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx %
