--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -89,7 +89,7 @@ Seznámili jsme čtenáře s historickým pozadím a základními prvky, které 
 
 \section{Chladná zbraň v akčních videohrách}
 
-Nyní, když máme rámcovou představu, jak boj s chladnou zbraní vypadá v reálném světě, nastíníme si, jakým způsobem bývá typicky adaptován v akčních videohrách - jaké jeho aspekty se podařilo v tomto universu věrně zpodobnit, jaké byly ignorovány, a jaké interpretovány s řádnou dávkou umělecké kreativity.
+Nyní, když máme rámcovou představu, jak boj s chladnou zbraní vypadá v reálném světě, nastíníme si, jakým způsobem bývá typicky adaptován v akčních videohrách - jaké jeho aspekty se podařilo v tomto universu věrně zpodobnit, jaké byly ignorovány, a jaké interpretovány s řádnou dávkou umělecké kreativity?
 
 \subsection{Obecný přehled}
 
@@ -273,6 +273,20 @@ Poslední hrou, kterou zmíníme, je Kingdom Come: Deliverance \cite{KCD}, vydá
 Celkově jde o systém nabízející značnou hloubku. Najdeme zde například propracovaný systém komb, velký důraz na správu výdrže a časovací události pro blokování nepřátelských úderů. Hráčské ohlasy dávají za pravdu, že hra nabízí \textbf{nejrealističtější zážitek boje s chladnou zbraní, jaký najdeme na trhu}.
 
 Pokoušet se zde o hloubkový rozbor však nemá valný smysl - byl by to úkol obtížný a jeho splnění by nám nepřineslo mnoho užitku, protože napodobení jakéhokoliv jednoho dílčího aspektu takového bojového systému se naprosto \textbf{vymyká časovým i finančním možnostem autora této práce}.
+
+
+\subsection{Shrnutí}
+
+Existuje mnoho dobrých důvodů, proč by hráč měl mít zájem o přímější kontrolu nad chladnou zbraní, poskytnout mu ji je však obtížný a nevděčný úkol, jehož splnění se neobejde bez kompromisů.  
+
+Největším problémem se zdá být \textbf{ovládání}. Všechny hry, které jsme si představili, jež měly mezi hráčskou komunitou úspěch, se ubíraly cestou \textbf{omezení množiny stavů}, ve kterých se zbraň může nalézat, na nemalou ale \textbf{konečnou} velikost. Tato cesta se zdá v reálném světě fungovat, neposkytuje však vysokou flexibilitu, bojový systém musí být hardcodován pro lidské nepřátele a nenabízí vysoké možnosti emergentního gameplaye. 
+
+O plně flexibilní systém umožňující \textbf{volný pohyb zbraně} a boj jakýchkoliv dvou entit majících končetiny schopné ji třímat se pokusilo Die by the Sword \cite{DieByTheSword} - to se však stalo živoucím důkazem, že navrhnout použitelné ovládání pro takový typ systému je \textbf{těžkým problémem}, jehož uspokojivé řešení vyžaduje více výzkumu. Pokud je autorovi této práce známo, žádné výzkumné snahy v tomto směru dosud nebyly vyvinuty.
+
+\clearpage
+%------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
+ % xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx %
+%------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
 
 
 \section{Alternativní ovladače}
