--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -78,8 +78,10 @@ Pro dosažení koordinace je však nutná \textbf{komunikace}. Dohodnout se při
 \bigbreak
 Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uvedené stále platí, akorát očividně kolosální výhody plynoucí z koordinovaného postupu jsou dopřány pouze jedné ze stran. I pro velmi zkušeného šermíře bojujícího proti několika nezkušeným, často jediná šance, jak z takové situace vyváznout, je protivníky rozdělit (kreativním použitím pohybu a znalosti terénu) a zdolat jednoho po druhém rychle, než mu ostatní přijdou na pomoc.
 
-\subsection*{Shrnutí}
-Seznámili jsme čtenáře s historickým pozadím a základními prvky, které charakterizují boj s chladnou zbraní v reálném světě. Nyní by měl být připraven pokročit dál a provést srovnání s přístupem, jakým tuto problematiku adaptuje svět videoher.
+\subsection{Shrnutí}
+Chladná zbraň provází lidstvo od samých jeho počátků. V průběhu dějin si metody její výroby a použití prošly bouřlivým vývojem, vzniklo mnoho metodik, mezi nejlépe dochované patří japonské tradiční umění Kentó a učení středověkých evropských mistrů - kolem obou z nich je v dnešní době soustředěna mohutná komunita civilních nadšenců.
+
+Mezi hlavní devizy zkušeného šermíře patří orientace na bojišti, schopnost pohybu, obratné zacházení se zbraní a schopnost předvídání protivníka. V hromadném boji toto stále platí, přednostní význam však předbírá taktické jednání, koordinace a disciplína vojenského celku.
 
 \clearpage
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
