--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -81,7 +81,7 @@ Dojde-li k boji \textbf{jediného bojovníka proti přesile}, vše výše uveden
 \subsection{Shrnutí}
 Chladná zbraň provází lidstvo od samých jeho počátků. V průběhu dějin si metody její výroby a použití prošly bouřlivým vývojem, vzniklo mnoho metodik, mezi nejlépe dochované patří japonské tradiční umění Kentó a učení středověkých evropských mistrů - kolem obou z nich je v dnešní době soustředěna mohutná komunita civilních nadšenců.
 
-Mezi hlavní devizy zkušeného šermíře patří orientace na bojišti, schopnost pohybu, obratné zacházení se zbraní a schopnost předvídání protivníka. V hromadném boji toto stále platí, přednostní význam však předbírá taktické jednání, koordinace a disciplína vojenského celku.
+Cílem boje je v typickém případě jakýmikoliv prostředky protivníka vyřadit z bojeschopného stavu. Mezi hlavní devizy zkušeného šermíře patří orientace na bojišti, schopnost pohybu, obratné zacházení se zbraní a schopnost předvídání protivníka. V hromadném boji toto stále platí, přednostní význam však přebírá taktické jednání, koordinace a disciplína vojenského celku.
 
 \clearpage
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
