ch.3 minor cleanup

--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -1,6 +1,8 @@
 \chapter{Návrh}
 
-\subsection{Stanovení cíle}
+\section{Stanovení cíle}
+
+\subsection{Jaký chceme výsledek}
 
 \textbf{neodsžitelným ideálem, ke kterému se snažíme směřovat, je dokonalé zachycení zážitku, co šerm poskytuje v reálném světě}
 
@@ -21,7 +23,7 @@
 \end{itemize}
 
 
-\subsection{Co k tomu použijeme}
+\subsection{Jaké nástroje použijeme}
 
 \textbf{herní engine Unity}
 \begin{itemize}
@@ -33,7 +35,7 @@
 
 \textbf{myslet na modularitu}
 
-\subsection{Myšlenky o mapování vstupu}
+\section{Myšlenky o mapování vstupu}
 \begin{itemize}
     \item k dispozici máme myš a klávesnici
     \item musí být pro hráče jednoduše uchopitelné (- ideálně tedy nějaký pěkně spojitý matematický formalizmus, co se dá dobře vizualizovat)
@@ -63,7 +65,7 @@
 \end{itemize}
 
 
-\subsection{Jak bude vypadat výsledek}
+\section{Jak bude vypadat výsledek}
 
 
 \section{Shrnutí}
