--- a/cs/kap02.tex
+++ b/cs/kap02.tex
@@ -1,4 +1,4 @@
-\chapter{Příprava}
+\chapter{Základy}
 (v této sekci si představíme herní engine Unity a jeho fyzikální subsystém)
 
 \section{Herní engine Unity}
