cg.1 summary wip

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -340,4 +340,4 @@ V reálném světě jde o extrémně komplexní oblast, která za sebou má mnoh
 
 Ve videohře chladná zbraň typicky figuruje jako "černá skříňka" - hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - jeho stisknutím postava provede útok jak sama uzná za vhodné. Výhodami tohoto systému jsou jednoduchost použití a univerzální aplikovatelnost i pro škálu velmi vzájemně odlišných zbraní. Má-li boj s chladnou zbraní sloužit jako nosná herní mechanika, hloubka mu je typicky dodávána důrazem na pohyb, celkový přehled o bojišti, přesné časování a kombinací s dalšími systémy (magie, lektvary, pasti).
 
-Takový systém tedy pěkně vystihuje některé z aspektů, které hrají roli v reálném světě, jedním
+Takový systém tedy pěkně vystihuje některé z aspektů, které hrají roli v reálném světě. Ten, který je pro typického laika nejzjevnější - totiž ovládání zbraně - je však ponechán zcela mimo hráčovu přímou kontrolu.
