--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -93,12 +93,12 @@ Cílem boje je v typickém případě jakýmikoliv prostředky protivníka vyřa
 
 Nyní, když máme rámcovou představu, jak boj s chladnou zbraní vypadá v reálném světě, nastíníme si, jakým způsobem bývá typicky adaptován v akčních videohrách - jaké jeho aspekty se podařilo v tomto universu věrně zpodobnit, jaké byly ignorovány, a jaké interpretovány s řádnou dávkou umělecké kreativity?
 
-\subsection{Obecný přehled}
+\subsection{Obecný přehled} \label{weaponInVideogamesBasics}
 
 Účinkujícími ve hře jsou \textbf{herní postavy}. Ty mohou být ovládané buď hráčem (takovou postavu nazveme \textbf{\acs{PC}}\footnote{\Acl{PC}}), nebo počítačovým algoritmem (tu označíme jako \textbf{\acs{NPC}}\footnote{\Acl{NPC}}), a lze je popsat nějakým jejich \textbf{vnitřním stavem}. Nyní si představíme základní veličiny, které jsou typickou součástí vnitřního stavu postavy ve všech akčních hrách bez ohledu na to, zda jde o hru zaměřenou na boj se střelnou zbraní, chladnou zbraní, či boj jakýkoliv jiný:
 
 \begin{itemize}
-    \item \textbf{\ac{HP}}... Číslo udávající zdravotní stav a životaschopnost postavy. \textbf{Pokud klesne na nulu, postava umírá.} K jeho snížení může dojít například úderem protivníkovy zbraně či pádem z výšky a takto odebraným bodům HP říkáme \textbf{\acs{dmg}}\footnote{\Acl{dmg}}. Hráči je stav jeho HP obvykle v reálném čase explicitně komunikován skrze ukazatel na obrazovce. V průběhu boje typicky nejsou doplňovány\footnote{Popřípadě prostředky, skrze které je lze doplnit, jsou vzácné.} a postava musí vystačit s tím, co má - jde tedy o zdroj vybízející k dlouhodobějšímu plánování.
+    \item \textbf{\ac{HP}}... Číslo udávající zdravotní stav a životaschopnost postavy. \textbf{Pokud klesne na nulu, postava umírá.} K jeho snížení může dojít například úderem protivníkovy zbraně či pádem z výšky a takto odebraným bodům HP říkáme \textbf{\acs{dmg}}\footnote{\Acl{dmg}}. Hráči je stav jeho HP obvykle v reálném čase explicitně komunikován skrze ukazatel na obrazovce. V průběhu boje typicky nejsou doplňovány\footnote{Popřípadě prostředky, skrze které je lze doplnit, jsou vzácné.} a postava musí vystačit s tím, co má - jde tedy o zdroj vybízející k dlouhodobějšímu hospodaření.
     \item \textbf{Výdrž}... Volitelný avšak častý prvek, číslo reprezentující akutní schopnost postavy vynakládat fyzické úsilí. Spotřebováváno chvatným pohybem a prováděním akcí, v průběhu boje zpravidla dochází k jeho rychlému opakovanému spotřebování a regeneraci.
     \item \textbf{Inventář}... List dalších předmětů, které postava nese s sebou. Může jít o peníze, léčivé lektvary, munici, náhradní zbraně, magické svitky, mapy a cokoliv dalšího v závislosti na hře. 
 \end{itemize}
@@ -111,7 +111,7 @@ Implikace, které takto jednoduché rozhraní přináší \textbf{pro hráče}, 
 \begin{itemize}
     \item \textbf{Intuitivnost} - Hráč, který poprvé spustí hru a zkusí náhodně mačkat tlačítka, rychle ovládání pochopí a začne být ve hře použitelný - žádná nutnost procházet úmorným tutoriálem.
     \item \textbf{Uniformní rozhraní pro všechny zbraně} - Tímto způsobem lze ovládat libovolnou zbraň, ať už jde o dvoumetrovou halapartnu či pěsti hráčovy postavy. Hráč tedy není přehlcen množstvím jednoúčelových herních systémů a z výhod, které získá svým zdokonalováním v použití bojového systému, může těžit po celou hru.
-    \item \textbf{Nízká specifičnost} - Rozhraní hráči neumožňuje těžit ze silných stránek žádné konkrétní zbraně. Hra mu skrze bojový systém není schopna poskytnout vzdělávací lekci ohledně vlastností zbraně v reálném světě. Pokud mu tyto vlastnosti již jsou známé, může utrpět jeho imerze.
+    \item \textbf{Nízká specifičnost} - Rozhraní hráči neumožňuje těžit ze silných stránek žádné konkrétní zbraně. Hra mu skrze bojový systém není schopna poskytnout vzdělávací lekci ohledně vlastností zbraně v reálném světě. Pokud hráči tyto vlastnosti již jsou známé, může trpět jeho imerze.
     \item \textbf{Limitovaná předvídatelnost} - Vzhledem k tomu, že akci, která bude vykonána, nevybírá hráč, ale jeho herní postava, vnáší se tím do hry prvek náhody, který má potenciál hru emocionálně okořenit.\footnote{Pokud však výběr akce probíhá nějakým deterministickým způsobem, hráč v něm brzy intuitivně vypozoruje určité vzory a naučí se akce své postavy do jisté míry předvídat a kalkulovat s nimi při plánování svého postupu - tím může bojový systém získat na hloubce.}
 \end{itemize}
 
@@ -122,7 +122,7 @@ A co důsledky, které tento přístup přináší z pohledu \textbf{tvůrce hry
     \item \textbf{Nízká specifičnost} - Není možné uspokojivě ztvárnit veškerá zajímavá specifika konkrétní zbraně. Všechny zbraně se musejí chovat do jisté míry podobně. Často je tak zbraň smrštěna do pouhé tabulky statů\footnote{Povrchní veličiny typu dosah, rychlost úderu, míra způsobeného zranění}.
 \end{itemize}
 
-Vidíme, že takovéto pojetí boje se zbraní má mnohá pozitiva, stále je však očividné, že \textbf{jde o systém jednoduchý, který sám o sobě nemůže sloužit jako nosná herní mechanika v akční videohře} - oblasti, kde cílová hráčská skupina očekává určitou míru komplexity a hloubky.
+Vidíme, že takovéto pojetí boje se zbraní má mnohá pozitiva, stále je však zřejmé, že \textbf{jde o systém jednoduchý, který sám o sobě nemůže sloužit jako nosná herní mechanika v akční videohře} - žánru, kde cílová hráčská skupina očekává určitou míru komplexity a hloubky.
 
 Hloubka bývá tomuto systému zpravidla dodávána výběrem mezi několika různými typy útoku (každý efektivní v jiné situaci), akcí pro blokování nepřátelských útoků, důrazem na časování (krátkodobé omráčení nepřítele, navazování úderů, odměna za vyblokování nepřítele v přesně správném okamžiku,...) a \textbf{silným propojením s dalšími mechanikami}, jakými je v první řadě pohyb, dále různé lektvary, magie apod. v závislosti na hře.
 
@@ -132,15 +132,15 @@ Toto si nyní názorně předvedeme na příkladě komerčně úspěšné hry z 
 Zaklínač 3: Divoký Hon \cite{Wiedzmin3} je akční \acs{RPG} hra, která byla vydána r. 2015 polským studiem CD Projekt. Mezi její hlavní důrazy patří \textbf{otevřený fantasy svět}, propracovaný \textbf{nelineární příběh}\footnote{Hra vychází z knižní série Zaklínač Andrzeje Sapkowského \cite{SapkowskiZaklinac}} a v neposlední řadě také dynamický \textbf{bojový systém}.
 
 Hráč se zde ujímá role Geralta z Rivie - zaklínače, \textbf{profesionálního lovce monster}. Ten je kromě svých dvou mečů\footnote{stříbrného pro boj s nestvůrami a železného proti lidem} vybaven flexibilními možnostmi pohybu, jednoduchými kouzly (tzv. Zaklínačská Znamení) a škálou ručně vařených lektvarů. Na své cestě bojuje s lidmi, duchy, upíry, bazilišky i nepopsatelnými obludami z nočních můr.
-Jak tedy vypadají mechaniky, skrze které bylo toto vše umožněno?:
+Jak tedy vypadají mechaniky, skrze které bylo toto vše umožněno?
 
 
-Základem jsou \textbf{dva typy úderů - rychlý a silný}. Jak vyplývá z názvu, rychlý úder je rychlejší, oproti tomu animace silného úderu trvá mírně delší čas, avšak zranění způsobené protivníkovi je také adekvátně zvýšené. K čemu je to dobré? Pro mnoho protivníků platí, že v okamžiku, kdy jim je učiněno nezanedbatelné zranění, přeruší akci, kterou se chystali provádět, a na zlomek času zakolísají. S rychlým úderem je hráč schopen toto zakolísání vyvolat častěji - s dobrým časováním se lze například dostat do cyklu, kdy lehkooděného protivníka hráč udolá jedním úderem za druhým aniž ten se zmohl udělat cokoliv proti vám. Toto stejné zakolísání však může potkat i hráče. Hráč se tedy neustále nachází v časovém tlaku, který ho vybízí kalkulovat - např. zda stihne dva rychlé údery, či raději jen jeden silný, než ho nějaký nepřítel přeruší. Dalším důvodem proč používat silný útok jsou těžkoodění nepřátelé, kterým rychlý útok udílí zranění velmi redukované. 
+Základem jsou \textbf{dva typy úderů - rychlý a silný}. Jak vyplývá z názvu, rychlý úder je rychlejší, oproti tomu animace silného úderu trvá mírně delší čas, avšak zranění způsobené protivníkovi je také adekvátně zvýšené. Jaký z tohoto rozlišení plyne prospěch? Pro mnoho protivníků platí, že v okamžiku, kdy jim je učiněno nezanedbatelné zranění, přeruší akci, kterou se chystali provádět, a na zlomek času zakolísají. S rychlým úderem je hráč schopen toto zakolísání vyvolat častěji - s dobrým časováním se lze například dostat do cyklu, kdy lehkooděného protivníka hráč udolá jedním úderem za druhým aniž ten se zmohl udělat cokoliv proti vám. Toto stejné zakolísání však může potkat i hráče. Hráč se tedy neustále nachází v časovém tlaku, který ho vybízí kalkulovat - např. zda stihne dva rychlé údery, či raději jen jeden silný, než ho nějaký nepřítel přeruší. Dalším důvodem proč používat silný útok jsou těžkoodění nepřátelé, kterým rychlý útok udílí zranění velmi redukované. 
 
 Drobným doplňkem je akce \textbf{blokování}. Bojujete-li proti lidem, držení tlačítka blokování vás činí prakticky imunním proti běžným útokům mířícím na vás zepředu, za tu velmi drobnou cenu, že sám nemůžete útočit a pohybovat se po bojišti lze jen velmi pomalu. Zajímavější je \textbf{perfektní blokování} - pokud zahájíte blokování přesně v okamžiku, kdy na vás protivník vede úder, provedete odvetný protiúder, který protivníka na pár sekund omráčí. Tím je do boje vnesen další prvek časování. Rovněž je třeba dávat pozor na nepřátele, kteří blokují proti vám.
 \bigbreak
 
-Proti chaotickým útokům vedeným změtí zubů a drápů nestvůry však blokování mečem ztrácí smysl. Tehdy přichází na řadu možnosti úskoků a kotoulů, které nabízí \textbf{systém pohybu}. Kromě nich samozřejmě hra nabízí i klasickou chůzi a sprint. Úskok je velmi drobný posun do strany, který nespotřebovává výdrž, pouze má interní cooldown (několik desetin sekundy) zabraňující spamování. Cílem je umožnit hráči tak akorát uskočit z oblasti dopadu nepřítelovy zbraně. Pro zajištění, že tento záměr bude vždy naplněn, je postavě na malý zlomek sekundy poskytnuta celková nezranitelnost. Kotoul je pak rámcově obdobný s tím rozdílem, že spotřebovává výdrž a na oplátku ho lze použít k rychlému překonání velké vzdálenosti. Hra klade velký důraz na hromadné boje, kde hráč musí být schopen prioritizovat cíle a rychle využívat objevivších se zranitelností jednotlivých nepřátel. Vysoká mobilita, kterou kotoul poskytuje, je tedy více než nápomocná.  
+Proti chaotickým útokům vedeným změtí zubů a drápů nestvůry však blokování mečem ztrácí smysl. Tehdy přicházejí na řadu možnosti úskoků a kotoulů, které nabízí \textbf{systém pohybu}. Kromě nich samozřejmě hra nabízí i klasickou chůzi a sprint. Úskok je velmi drobný posun do strany, který nespotřebovává výdrž, pouze má interní cooldown (několik desetin sekundy) zabraňující spamování. Cílem je umožnit hráči tak akorát uskočit z oblasti dopadu nepřítelovy zbraně. Pro zajištění, že tento záměr bude vždy naplněn, je postavě na malý zlomek sekundy poskytnuta celková nezranitelnost. Kotoul je pak rámcově obdobný s tím rozdílem, že spotřebovává výdrž a na oplátku ho lze použít k rychlému překonání velké vzdálenosti. Hra klade velký důraz na hromadné boje, kde hráč musí být schopen prioritizovat cíle a rychle využívat objevivších se zranitelností jednotlivých nepřátel. Vysoká mobilita, kterou kotoul poskytuje, je tedy více než nápomocná.  
 
 Zaklínačská Znamení do boje přinášejí další vrstvu komplexity. Jde o \textbf{5 kouzel}, která spotřebovávají velkou porci výdrže a na oplátku zaklínači mocně pomohou - např. může jít o ochranné silové pole, poryv větru, který má šanci omráčit zasažené protivníky, či zmatení, které přiměje nepřítele bojovat na vaší straně.
 
@@ -148,11 +148,11 @@ Výčet Znamení je pevně stanoven, avšak klasicky pro žánr \acs{RPG}, hra z
 
 Poslední částí zaklínačova repertoáru, kterou zmíníme, jsou lektvary a oleje. Jde o \textbf{konzumovatelné předměty}, které hráč v průběhu hry sám vyrábí, a po jejich konzumaci (požití lektvaru postavou / namazání oleje na meč) mu je na určitý časový limit poskytnut nějaký bonus (př. regenerace zdraví, bonusové zranění proti upírům apod.). Jde tedy o zdroje, se kterými hráč hospodaří v dlouhodobějším horizontu, ale použity v kritickém okamžiku mohou zvrátit výsledek boje. 
 
-Esenciální součástí každé hry s bojovými prvky, jsou také \textbf{nepřátelé}. V této oblasti byl Zaklínač 3 k hráči velmi štědrý. Najdeme zde obyčejné lidské nepřátele (bandity, nepřátelské vojáky apod.), jejichž způsob boje sdílí mnoho prvků se zaklínačovým - např. jsou schopni blokovat jeho údery. Dále pak širokou paletu monster všech velikostí a tvarů, pozemní i schopné létat vzduchem, vybuchující, duchy zranitelné pouze specifickými cestami, tvory vládnoucí magií - každý nepřítel má své osobité silné a slabé stránky a vybízí hráče k jinému stylu hraní.
+Esenciální součástí každé hry s bojovými prvky jsou také \textbf{nepřátelé}. V této oblasti byl Zaklínač 3 k hráči velmi štědrý. Najdeme zde obyčejné lidské nepřátele (bandity, nepřátelské vojáky apod.), jejichž způsob boje sdílí mnoho prvků se zaklínačovým - např. jsou schopni blokovat jeho údery. Dále pak širokou paletu monster všech velikostí a tvarů: pozemní i schopné létat vzduchem, vybuchující, duchy zranitelné pouze specifickými cestami, tvory vládnoucí magií - každý nepřítel má své osobité silné a slabé stránky a vybízí hráče k jinému stylu hraní.
 
 \bigbreak
 
-Vidíme, že bojový systém Zaklínače 3 je zjevně postaven kolem kostry, kterou jsme si načrtli v předchozí kapitole, zároveň jde o systém mající značnou hloubku. Tato hloubka je získána z velké části důrazem na celkový hráčův přehled o situaci na bojišti, škálou osobitých nepřátel, důrazem na časování, a pak také propojením s dalšími systémy - pohybem, magií a vařením lektvarů. 
+Vidíme, že bojový systém Zaklínače 3 je zjevně postaven kolem kostry, kterou jsme si načrtli v \ref{weaponInVideogamesBasics}, zároveň jde o systém mající značnou hloubku. Tato hloubka je získána z velké části důrazem na celkový hráčův přehled o situaci na bojišti, škálou osobitých nepřátel, důrazem na časování, a pak také propojením s dalšími systémy - pohybem, magií a vařením lektvarů. 
 
 Hráči je poskytnut prostor k budování dovednosti a k důmyslnému taktizování jak v krátkodobém, tak v dlouhodobém horizontu. Celkové kvality bojového systému ostatně potvrzuje značný komerční úspěch, kterého se hře po vydání dostalo.
 
@@ -160,7 +160,7 @@ Mezi možné příčiny úspěchu hry můžeme zařadit také pozorování, že 
 
 \subsection{Chladná zbraň jako doplňkový prvek}
 
-Chladnou zbraň najdeme také v mnoha hrách, ve kterých není stěžejním prvkem. Například ve většině her žánru \textbf{\acs{FPS}} najdeme kromě širokého výběru palných zbraní i nějaký nůž jako poslední zálohu když dojde munice, v žánru \textbf{stealth} často vidíme chladnou zbraň jako prostředek k tiché likvidaci nepřátel a takto bychom mohli pokračovat. Mnohdy taková zbraň odpovídá popisu z 1.2.1 - cílem není, aby chladná zbraň sama o sobě byla zajímavou mechanikou, naopak \textbf{tvoří pouze jeden dílek} ve skládačce herního systému a pro hráče musí především být jednoduše uchopitelná. 
+Chladnou zbraň najdeme také v mnoha hrách, ve kterých není stěžejním prvkem. Například ve většině her žánru \textbf{\acs{FPS}} najdeme kromě širokého výběru palných zbraní i nějaký nůž jako poslední zálohu když dojde munice, v žánru \textbf{stealth} často vidíme chladnou zbraň jako prostředek k tiché likvidaci nepřátel a takto bychom mohli pokračovat. Mnohdy taková zbraň odpovídá popisu z \ref{weaponInVideogamesBasics} - cílem není, aby chladná zbraň sama o sobě byla zajímavou mechanikou, naopak \textbf{tvoří pouze jeden dílek} ve skládačce herního systému a pro hráče musí především být jednoduše uchopitelná. 
 
 Přesto najdeme mnoho takových zbraní, které se staly \textbf{ikonickým symbolem} své hry - zmínit můžeme například hru DOOM \cite{DOOM1993} a motorovou pilu, či páčidlo ze série Half-Life \cite{HalfLife}.
 
@@ -178,9 +178,9 @@ V mnoha hrách (např. žánry \acs{FPS}, stealth) slouží chladná zbraň pouz
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
 
 
-\section{Hry s větší kontrolou}
+\section{Hry s větší kontrolou} \label{gamesWithMoreDirectControll}
 
-Nyní víme, jakým způsobem je typicky chladná zbraň v akčních hrách ztvárňována, známe pozitiva, která tato cesta přináší, a rovněž některé triky, jak jejím prostřednictvím dosáhnout poutavého bojového systému. Co nás ale čeká, kdybychom chtěli sejít z vyšlapané cesty a nabídnout hráči nad jeho zbraní větší míru kontroly?
+Nyní víme, jakým způsobem je typicky chladná zbraň v akčních hrách ztvárňována, známe pozitiva, která tato cesta přináší, a rovněž některé triky, jak jejím prostřednictvím dosáhnout poutavého bojového systému. Co nás ale čeká, kdybychom chtěli sejít z vyšlapané stezky a nabídnout hráči nad jeho zbraní větší míru kontroly?
 
 \subsection{Benefity a výzvy}
 
@@ -202,11 +202,11 @@ Vidíme, že motivace k umožnění větší kontroly je silně nezanedbatelná.
 
 \textbf{Jaké očividné problémy je tedy třeba vyřešit?}
 \bigbreak
-Prvním je \textbf{ovládání}. Meč je obecný objekt v 3D prostoru, má tři stupně volnosti pro polohu a další tři pro rotaci. Nemluvě o dalších vlastnostech - např. jak pevně ho šermíř drží. Pro žádnou z těchto veličin se nenabízí očividný způsob, jak ji zanedbat či odvozodit z těch ostatních. Abychom mohli mečem sekat, bodat a blokovat údery, potřebujeme pohybovat rukojetí a natáčet čepel, obojí po všech třech osách. Rotace meče kolem jeho středové osy by se zdála jako vhodný kandidát k implicitnímu odvozování, avšak např. k odpalování projektilů je velmi vhodné moci zajistit, že do nich udeříme plohou stranou meče, místo abychom je rozsekli ostrou hranou čepele.
+Prvním je \textbf{ovládání}. Meč je obecný objekt v 3D prostoru, má tři stupně volnosti pro polohu a další tři pro rotaci. Nemluvě o dalších vlastnostech - např. jak pevně ho šermíř drží. Pro žádnou z těchto veličin se nenabízí očividný způsob, jak ji zanedbat či odvodit z těch ostatních. Abychom mohli mečem sekat, bodat a blokovat údery, potřebujeme pohybovat rukojetí a natáčet čepel, obojí po všech třech osách. Rotace meče kolem jeho středové osy by se zdála jako vhodný kandidát k implicitnímu odvozování, avšak např. k odpalování projektilů je velmi vhodné moci zajistit, že do nich udeříme plochou stranou meče, místo abychom je rozsekli ostrou hranou čepele.
 
-Oproti tomu \textbf{počítačové periferie}, které se běžně používají jako zdroj hráčského vstupu - tedy myš a klávesnice, popřípadě ovladače u herní konzole - poskytují informaci nanejvýše dvourozměrnou (horizontální a vertikální osa). Neexistuje tedy přímočarý a intuitivní způsob, jak na ně pohyb meče namapovat - je nutné učinit kompromis a nějakým způsobem volnost pohybu meče omezit. Alternativní metody ovládání, které tento problém nemají, existují, a stručně se na ně podíváme později v této kapitole, jejich rozšířenost mezi hráči však není taková, aby bylo rozumné spoléhat, že jimi naše cílová skupina disponuje.
+Oproti tomu \textbf{počítačové periferie}, které se běžně používají jako zdroj hráčského vstupu - tedy myš a klávesnice, popřípadě ovladače u herní konzole - poskytují informaci nanejvýše dvourozměrnou (horizontální a vertikální osa). Neexistuje tedy přímočarý a intuitivní způsob, jak na ně pohyb meče namapovat - je nutné učinit kompromis a nějakým způsobem volnost pohybu meče omezit. Alternativní metody ovládání, které tento problém nemají, existují, a stručně se na ně podíváme v \ref{alternativeControllers}, jejich rozšířenost mezi hráči však není taková, aby bylo rozumné spoléhat, že jimi naše cílová skupina disponuje.
 \bigbreak
-Pokud se nám podaří problém ovládání uspokojivě vyřešit, narazíme na další v oblasti \textbf{hratelnosti}. Důležitou součástí dynamiky boje s chladnou zbraní je předvídání protivníkových úderů a reagování na ně ještě dříve, než se stanou. V reálném světě je šermíř schopen pozorovat drobné pohyby svalů a očí protivníka, které v tomto ohledu mnohé napoví. V počítačové hře samozřejmě je hráčova schopnost vnímat takovéto detaily velmi omezená. Tento problém je ve hrách typicky řešen tak, že animace úderů zahrnují jako počáteční fázi výrazný nápřah. Jak však zajistíme takovéto výrazné telegrafování útoků, pokud má nepřítel nad mečem jemnou kontrolu a může z principu věci dělat co si jen zachce? Chceme vůbec ve hře mít výrazné telegrafování vzhledem k tomu, že neodpovídá realitě? Rozlousknutí tohoto problému si vyžaduje kompromisy.
+Pokud se nám podaří problém ovládání uspokojivě vyřešit, narazíme na další v oblasti \textbf{hratelnosti}. Důležitou součástí dynamiky boje s chladnou zbraní je předvídání protivníkových úderů a reagování na ně ještě dříve, než se stanou. V reálném světě je šermíř schopen pozorovat drobné pohyby svalů a očí protivníka, které v tomto ohledu mnohé napoví. V počítačové hře samozřejmě je hráčova schopnost vnímat takovéto detaily velmi omezená. Tento problém je ve hrách typicky řešen tak, že animace úderů zahrnují jako počáteční fázi výrazný nápřah. Jak však zajistíme takovéto výrazné telegrafování útoků, pokud má nepřítel nad mečem jemnou kontrolu a může z principu věci dělat cokoliv jen zachce? Chceme vůbec ve hře mít výrazné telegrafování vzhledem k tomu, že neodpovídá realitě? Rozlousknutí tohoto problému si vyžaduje kompromisy.
 \bigbreak
 V neposlední řadě, plná kontrola nad mečem nemusí vhodně ladit s \textbf{narativní} složkou hry. V mnoha akčních hrách prezentuje příběh hráčovu postavu jako zkušeného šermíře, ne-li přímo virtuosa meče, jakému se v herním světě vyrovná jen hrstka dalších. Problémem však je, že většinový hráč srovnatelně zkušeným šermířem s největší pravděpodobností není. Je-li šermířská dovednost postavy fakticky přímo úměrná hráčově dovednosti, může tím tedy docházet k narativní disonanci. Zahrnutím takového bojového systému se designérům, kteří mají narativ na starosti, citelně komplikuje práce. 
 \bigbreak
@@ -222,7 +222,7 @@ Jde o jedinou hru, kterou si zde představíme, jež se nevydala cestou omezení
 
 \textbf{Backend hry} umožňoval \textbf{plně volný pohyb} všech objektů třímaných herní postavou (postava mohla např. v jedné ruce držet meč a ve druhé štít či druhý meč), přičemž tělo postavy bylo \textbf{procedurálně animováno} (další na tuto dobu vzácný úkaz), aby poloha jejích rukou s polohou objektů korespondovala.
 
-Tento přístup k implementaci přinesl některé \textbf{zajímavé důsledky}. Hráč se nemusel učit používat dedikovanou mechaniku pro blokování nepřátelských úderů, stačilo meč napolohovat tak, aby tomu nepřátelskému stál v cestě. Podobným způsobem zde byl nepřeberný prostor pro další zajímavé techniky, vyvíjené a zdokonalované plně hráčskou komunitou. Dále, díky obecnosti systému nebyl problém mít nepřátele všech představitelných tvarů a velikostí - dokud měl nepřítel hmotné tělo, mohli jste ho mečem trefit; dokud měl nějakou končetinu, mohl sám držet zbraň. Spojením se systémem procedurální animace nestvůrám bylo možné velmi efektně odsekávat kusy těla a kochat se jejich zvýšenou nemotorností\footnote{případně rovnou neschopností hráče zranit, pokud byla odseknuta končetina třímající zbraň}. K dovršení dojmu vás hra nechala chopit se odseknuté končetiny jako zbraně, stále při stejném ovládání, jaké vám nabídl meč.
+Tento přístup k implementaci přinesl některé \textbf{zajímavé důsledky}. Hra nepotřebovala implementovat dedikovanou mechaniku pro blokování nepřátelských úderů, stačilo meč napolohovat tak, aby tomu nepřátelskému stál v cestě. Podobným způsobem zde byl nepřeberný prostor pro další zajímavé techniky, vyvíjené a zdokonalované plně hráčskou komunitou. Dále, díky obecnosti systému nebyl problém mít nepřátele všech představitelných tvarů a velikostí - dokud měl nepřítel hmotné tělo, mohli jste ho mečem trefit; dokud měl nějakou končetinu, mohl sám držet zbraň. Spojením se systémem procedurální animace nestvůrám bylo možné velmi efektně odsekávat kusy těla a kochat se jejich zvýšenou nemotorností\footnote{případně rovnou neschopností hráče zranit, pokud byla odseknuta končetina třímající zbraň}. K dovršení dojmu vás hra nechala chopit se odseknuté končetiny jako zbraně, stále při stejném ovládání, jaké vám nabídl meč.
 
 Kamenem úrazu pro hru však nesporně bylo \textbf{ovládání}. Tvůrci hry si byli zřejmě vědomi, o jak náročnou výzvu vyžadující dlouhodobý výzkum v případě této hry jde, a nabídli hned několik velmi odlišných metod vstupu pro udání pohybu zbraně:
 \begin{itemize}
@@ -249,7 +249,7 @@ Zbraní najdeme více druhů - meče, sekery, kyje, kopí a další. Útočné z
 
 Druhým typem akce, který lze vykonávat, je \textbf{blokování}. Je-li hráč vybaven štítem, stačí držet stisknuté levé tlačítko myši a postava je kryta proti veškerým úderům, které na ni míří zepředu. Chce-li však postava provést útok se zbraní, musí nejprve kryt přerušit, čímž ochrany pozbyde. Dalším omezujícím faktorem je omezená odolnost štítu - utrží-li štít určité množství \acs{dmg}, je zničen a postava ho zahodí. Čímž přijde na řadu obtížnější situace - blokování pomocí zbraně. Zde se opět dostáváme k využití úderových zón - zkrátka zóna, ve které obránce blokuje, musí odpovídat zóně útočníka - jinak k vyblokování úderu nedojde.
 
-Prvkem, který umocňuje hráčův dojem realističnosti, je \textbf{výpočet zranění}. Hra se obecně nepokouší o realistickou fyzikální simulaci, avšak způsobené zranění je přesto determinováno kombinací mnoha faktorů, které realistické chování účinně aproximují - zmíníme rychlost zbraně, délku její dráhy apod. . Dále je využíváno jemné detekce kolizí. Zaprvé k tomu, aby se určila zasažená část těla - různým částem těla postavy odpovídá různý kus zbroje, která určuje, jakou mírou má zranění být redukováno. Zadruhé, zranění je velmi silně redukováno, pokud při své cestě zbraň prošla skrze zeď či jiný prvek okolního prostředí. 
+Prvkem, který umocňuje hráčův dojem realističnosti, je způsob \textbf{výpočtu zranění}. Hra se obecně nepokouší o realistickou fyzikální simulaci, avšak způsobené zranění je přesto determinováno kombinací mnoha faktorů, které realistické chování účinně aproximují - zmíníme rychlost zbraně, délku její dráhy apod. . Dále je využíváno jemné detekce kolizí. Zaprvé k tomu, aby se určila zasažená část těla - různým částem těla postavy odpovídá různý kus zbroje, která určuje, jakou mírou má zranění být redukováno. Zadruhé, zranění je velmi silně redukováno, pokud při své cestě zbraň prošla skrze zeď či jiný prvek okolního prostředí. 
 
 Nyní rámcově víme, jak bojový systém funguje. Pojďme se tedy podívat na benefity, které z této implementace plynou. Vidíme, že hře se \textbf{podařilo najít kompromis} slučující některé prvky, které by se z naší předchozí anylýzy mohly zdát vzájemně protichůdné.
 \begin{itemize}
@@ -290,14 +290,14 @@ O plně flexibilní systém umožňující \textbf{volný pohyb zbraně} a boj j
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
 
 
-\section{Alternativní ovladače}
+\section{Alternativní ovladače} \label{alternativeControllers}
 
 Jak jsme si nastínili v předchozí sekci, \textbf{ovládání} je těžkým problémem, který musí vyřešit každá hra, která se hráči pokouší poskytnout nad zbraní větší kontrolu. V dosavadní části práce jsme však brali v úvahu výhradně běžné ovladací periferie - počítačovou myš a klávesnici, popř. ovladač u herní konzole. Jejich společným znakem je dvourozměrný charakter informace, kterou poskytují. Hlavní problém pak plyne z potřeby namapovat tuto 2D hodnotu na 3D polohu meče. 
 
 Existuje však mnoho dalších způsobů ovládání - některé se pomalu rozšiřují směrem k mainstreamu, některé jsou předmětem experimentálního výzkumu. 
 V této sekci se podíváme na dva takové méně obvyklé způsoby ovládání, které mají potenciál posloužit jako zdroj 3D vstupu.
 
-\subsection{Virtuální realita}
+\subsection{Virtuální realita} \label{VRControllers}
 
 Očividnou oblastí, kde můžeme najít ovladač poskytující 3D vstup, je virtuální realita (dále jen \acs{VR}). 
 
@@ -340,4 +340,4 @@ V reálném světě jde o extrémně komplexní oblast, která za sebou má mnoh
 
 Ve videohře chladná zbraň typicky figuruje jako "černá skříňka" - hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - jeho stisknutím postava provede útok jak sama uzná za vhodné. Výhodami tohoto systému jsou jednoduchost použití a univerzální aplikovatelnost i pro škálu velmi vzájemně odlišných zbraní. Má-li boj s chladnou zbraní sloužit jako nosná herní mechanika, hloubka mu je typicky dodávána důrazem na pohyb, celkový přehled o bojišti, přesné časování a kombinací s dalšími systémy (magie, lektvary, pasti).
 
-Takový systém tedy pěkně vystihuje některé z aspektů, které hrají roli v reálném světě. Ten, který je pro typického laika nejzjevnější - totiž ovládání zbraně - je však ponechán zcela mimo hráčovu přímou kontrolu.
+Takový systém tedy pěkně vystihuje některé z aspektů, které hrají roli v reálném světě. Ten, který je pro typického laika nejzjevnější - totiž ovládání zbraně - je však ponechán zcela mimo hráčovu přímou kontrolu. Pokud by se nám podařilo hráči poskytnout přímou kontrolu nad zbraní, mohlo by to přinést mnoho dalších benefitů
