ch.2 - corrections + 1st draft of summary

--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -49,6 +49,12 @@
 }
 
 
+@manual{PhysX,
+  author       = {NVIDIA},
+  title        = {PhysX SDK},
+  url          = {https://gameworksdocs.nvidia.com/PhysX/4.1/documentation/physxguide/Index.html},
+}
+
 
 @article{AustralopithecusWeapon,
   author          = {Minkoff, Eli C.},
