--- a/cs/prace.tex
+++ b/cs/prace.tex
@@ -65,6 +65,7 @@
 \usepackage{paralist}       % lepší enumerate a itemize
 \usepackage{xcolor}         % barevná sazba
 
+\usepackage{hyperref}
 \usepackage[none]{hyphenat}
 \iraggedright
 \usepackage{acro}	% seznam zkratek
