ch.1 summary - 1st draft

--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -336,8 +336,12 @@ Docházíme tedy k závěru, že bude nejlépe, když naší hře umožníme pod
 
 Uvedli jsme čtenáře do problematiky boje s chladnou zbraní v reálném světě, tento náhled jsme následně zkontrastovali s tím, jak je tato problematika zachycena ve videohrách.
 
-V reálném světě jde o extrémně komplexní oblast, která za sebou má mnoho tisíciletí vývoje, nespočet technik vedoucích k jedinému cíli - vyřadit protivníka z bojeschopného stavu dříve než on vás. Naprostými základy jsou orientace na bojišti, správná technika pohybu, obratné a kreativní použití zbraně, a předvídání protivníka. V případě hromadného boje pak koordinace a disciplína vojenského celku. 
+V reálném světě jde o extrémně komplexní oblast, která za sebou má mnoho tisíciletí vývoje, nespočet technik vedoucích k jedinému cíli - vyřadit protivníka z bojeschopného stavu dříve než on vás. Naprostými základy jsou orientace na bojišti, správná technika pohybu, obratné a kreativní použití zbraně, a předvídání protivníka. V případě hromadného boje pak rovněž koordinace a disciplína vojenského celku. 
 
-Ve videohře chladná zbraň typicky figuruje jako "černá skříňka" - hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - jeho stisknutím postava provede útok jak sama uzná za vhodné. Výhodami tohoto systému jsou jednoduchost použití a univerzální aplikovatelnost i pro škálu velmi vzájemně odlišných zbraní. Má-li boj s chladnou zbraní sloužit jako nosná herní mechanika, hloubka mu je typicky dodávána důrazem na pohyb, celkový přehled o bojišti, přesné časování a kombinací s dalšími systémy (magie, lektvary, pasti).
+Ve videohře chladná zbraň typicky figuruje jako "černá skříňka" - hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - jeho stisknutím postava provede útok jak sama uzná za vhodné. Výhodami tohoto systému jsou jednoduchost použití a univerzální aplikovatelnost i pro škálu velmi vzájemně odlišných zbraní. Má-li boj s chladnou zbraní sloužit jako nosná herní mechanika, hloubka mu je typicky dodávána důrazem na pohyb, přehled o bojové situaci a přesné časování, dále kombinací s dalšími systémy (magie, lektvary, pasti), v neposlední řadě kreativním designem nepřátel.
 
-Takový systém tedy pěkně vystihuje některé z aspektů, které hrají roli v reálném světě. Ten, který je pro typického laika nejzjevnější - totiž ovládání zbraně - je však ponechán zcela mimo hráčovu přímou kontrolu. Pokud by se nám podařilo hráči poskytnout přímou kontrolu nad zbraní, mohlo by to přinést mnoho dalších benefitů
+Takový systém tedy pěkně vystihuje některé z aspektů, které hrají roli v reálném světě. Ten, který je pro typického laika nejzjevnější - totiž ovládání zbraně - je však ponechán zcela mimo hráčovu přímou kontrolu. Hra, které by se zdařilo poskytnout hráči nad zbraní bezprostřední kontrolu, by tím mohla získat mnoho benefitů - mimo zjevné atraktivity plynoucí z neohranosti konceptu například taková zbraň má potenciál stát se vděčným zdrojem emergentního gameplaye.
+
+Představili jsme si podrobněji několik her, které se o dosažení tohoto cíle pokoušely. Jedinou z nich, která umožnila skutečně volný pohyb, a rovněž jedinou, které se nedostalo komerčního úspěchu, bylo Die by the Sword \cite{DieByTheSword}. Tato hra kombinací realistické fyzikální simulace a procedurální animace vytvořila systém, kterému nečinil problém zápas libovolných entit vybavených libovolným počtem končetin třímajících meč, ba dokonce umožnil dynamické odsekávání částí těla, na které nepřátelé patřičně reagovali. 
+
+Kamenem úrazu se však hře stalo \textbf{ovládání}. Problém plynul z faktu, že tradičně používané ovládací periferie poskytují dvourozměrný vstup, který nelze přímočaře namapovat na 3D polohu a rotaci meče. Pro hry usilující o takovou míru volnosti jako Die by the Sword jde do dnešní doby o těžký problém, pro který nebylo nalezeno uspokojivé řešení - jedinou možností se zdá být výměna myši za drahý \acs{VR} ovladač. Cílem této práce je vytvořit otevřenou platformu, která umožní v této oblasti provádět experimentální výzkum.
