--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -22,11 +22,11 @@
 
 \section{Stabilita simulace}
 
-\subsection{Jak nastavit cílovou rotaci jointu}
+\subsection{Jak nastavit cílovou rotaci jointu} \label{howToSetJointsTargetRotationSection}
 
-\subsection{Ladění parametrů}
+\subsection{Ladění parametrů} \label{swordParameterTweaksSection}
 
-\subsection{Kolize mečů}
+\subsection{Kolize mečů} \label{swordCollisionsSection}
 
 
 \section{Shrnutí}
