ch.2 added some hints

--- a/cs/kap02.tex
+++ b/cs/kap02.tex
@@ -36,6 +36,16 @@ V této kapitole čtenáře seznámíme s herním enginem Unity do míry potřeb
     \item všechno probíhá sekvenčně na main threadu
 \end{itemize}
 
+\subsection{Základní knihovny}
+\begin{itemize}
+    \item (vše pouze zmínit že existuje)
+    \item matematická primitiva - Vector3, Ray, matice, apod.
+    \item instanciace gameobjectů a komponent za runtimu
+    \item Vykreslování grafiky
+    \item NavMesh
+    \item extrémně moc dalších věcí
+\end{itemize}
+
 
 \section{Fyzikální subsystém enginu Unity}
 
@@ -97,6 +107,7 @@ V této kapitole čtenáře seznámíme s herním enginem Unity do míry potřeb
     \item constraint solver, nesplnitelné constrainty, iterativní metody
     \item to, že collidery neodpovídají meshům, taky nepřidává přesnosti
     \item ladění - parametry fixedFrameDuration, iterationCount, který constraint solver se používá apod.
+    \item zmínit vestavěný Physics Debugger
 \end{itemize}
 
 
